--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
+body {
+  font-family: 'Raleway', sans-serif;
+  line-height: 0.8;
+  background-color: gainsboro;
+  color: grey;
+}
+
+/* student list */
+.studentsList {
+  background-color: white;
+  width: 800px;
+  min-height: 400px;
+  max-height: 600px;
+  overflow: hidden;
+  overflow-y: scroll;
+  margin: 50px auto;
+  border-radius: 15px;
+  box-shadow: grey 0px 4px 4px;
+  position: relative;
+}
+
+.studentsList::-webkit-scrollbar {display:none;}
+
+.searchDiv {
+  width: 100%;
   text-align: center;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  border: 0;
+  border-bottom: solid 1px gainsboro;
+  font-size: 1.5rem;
+  font-family: 'Raleway', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchDiv input {
+  width: 98%;
+  padding: 15px 0;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input:focus {
+  outline: none;
+  border-bottom: solid 1px;
+}
+
+input::placeholder {
+  color: grey;
+}
+
+
+
+/* profile */
+.studentProfile {
+  border-bottom: solid 1px gainsboro;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-left: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.studentProfile:last-child {
+  border-bottom: solid 1px transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.studentProfile .avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: solid 1px grey;
+  margin-right: 20px;
+  margin-top: 15px;
+}
+
+.studentName {
+  text-transform: uppercase;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.studentDetail {
+  padding-left: 25px;
+}
+
+.gradeList {
+  line-height: 0.2;
+  padding-top: 10px;
+}
+
+.grade {
+  padding-left: 20px;
+}
+
+.expand-btn-div {
+  position: absolute;
+  right: 15px;
+  padding-top: 15px;
+}
+
+.expand-btn-div button {
+  border: 0;
+  background-color: inherit;
+}
+
+.expand-btn-div button:focus {
+  outline: none;
+}
+
+.expand-btn-div i {
+  font-size: 1.5rem;
+  color: grey;
+} 
+
+#createNewTag {
+  width: 200px;
+  padding-top: 0;
+  padding-bottom: 15px;
+}
+
+#createNewTag input {
+  width: 100%;
+  padding: 7px 0px;
+  font-size: 1rem;
+}
+
+.tag {
+  color: black;
+  background-color: gainsboro;
+  border-radius: 4px;
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px;
 }
